--- a/src/styling/_album.scss
+++ b/src/styling/_album.scss
@@ -59,7 +59,7 @@
 }
 
 .album__tracks {
-  margin: 0 1rem 4rem 1rem;
+  margin: 0 1rem 8rem 1rem;
 }
 
 .album__tracks-headline{
@@ -93,7 +93,9 @@
     gap: 2rem;
   }
   
-  
+  .album__tracks {
+  margin: 0 1rem 4rem 1rem;
+}
   
   
   
